compiler/actonc/test/typeerrors/ex15.act
def f(x : str):
    y = 1
    raise y
#    y = y + x[7]
    return y

